[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Maps/TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/NPCs/KingDonjon0.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Character/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/Pet/Pet.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Characters/NPC/Roi_Idle.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Passives/CavernDoor.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Maps/Donjons/Donjon0.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Interactives/Torch.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Interactives/LightingFirecamp.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Interactives/Cow.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/NPCs/NPC.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Passives/Mirror.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Passives/Stairs.tscn" type="PackedScene" id=13]

[sub_resource type="Animation" id=1]
resource_name = "E2_TorchMoving"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Torch_Enigme2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1200, 368 ), Vector2( 1296, 368 ), Vector2( 1200, 368 ) ]
}

[node name="Donjon0" type="Node2D"]
script = ExtResource( 7 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -327634, -1073741783, 131073, -327633, 1073741864, 131072, -327632, 1073741864, 131073, -327631, 1073741864, 131073, -327630, 1073741864, 131073, -327629, 1073741864, 131073, -327628, 1073741864, 131073, -327627, 1073741864, 131073, -327626, 1073741864, 131073, -327625, 1073741864, 131073, -327624, 1073741864, 131073, -327623, 1073741864, 131073, -327622, 1073741864, 131074, -327621, -1610612695, 131073, -262098, -1073741783, 131073, -262097, 40, 65536, -262096, 40, 65537, -262095, 40, 65537, -262094, 40, 65537, -262093, 40, 65537, -262092, 40, 65537, -262091, 40, 65537, -262090, 40, 65537, -262089, 40, 65537, -262088, 40, 65537, -262087, 40, 65537, -262086, 40, 65538, -262085, -1610612695, 131073, -196562, -1073741783, 131073, -196561, 40, 131072, -196560, 40, 131073, -196559, 40, 131073, -196558, 40, 131073, -196557, 40, 131073, -196556, 40, 131073, -196555, 40, 131073, -196554, 40, 131073, -196553, 40, 131073, -196552, 40, 131073, -196551, 40, 131073, -196550, 40, 131074, -196549, -1610612695, 131073, -131026, -1073741783, 131073, -131025, 42, 0, -131024, 42, 0, -131023, 42, 0, -131022, 42, 0, -131021, 42, 0, -131020, 42, 0, -131019, 42, 0, -131018, 42, 0, -131017, 42, 0, -131016, 42, 0, -131015, 1610612778, 0, -131014, 1610612778, 0, -131013, -1610612695, 131073, -65490, -1073741783, 131073, -65489, 42, 0, -65488, 42, 0, -65487, 42, 0, -65486, 42, 0, -65485, 42, 0, -65484, 42, 0, -65483, 42, 0, -65482, 42, 0, -65481, 42, 0, -65480, 42, 0, -65479, 1610612778, 0, -65478, 1610612778, 0, -65477, -1610612695, 131073, 65535, -1073741783, 131073, 0, 1073741864, 131072, 1, 1073741864, 131073, 2, 1073741864, 131073, 3, 1073741864, 131073, 4, 1073741864, 131073, 5, 1073741864, 131073, 6, 1073741864, 131073, 7, 1073741864, 131073, 8, 1073741864, 131074, 9, -1610612695, 131073, 13, -1073741783, 131073, 14, 1073741864, 131072, 15, 1073741864, 131073, 16, 1073741864, 131073, 17, 1073741864, 131073, 18, 1073741864, 131073, 19, 1073741864, 131073, 20, 1073741864, 131073, 21, 1073741864, 131073, 22, 1073741864, 131073, 23, 1073741864, 131073, 24, 1073741864, 131074, 25, -1610612695, 131073, 29, -1073741783, 131073, 30, 1073741864, 131072, 31, 1073741864, 131073, 32, 1073741864, 131073, 33, 1073741864, 131073, 34, 1073741864, 131073, 35, 1073741864, 131073, 36, 1073741864, 131073, 37, 1073741864, 131073, 38, 1073741864, 131073, 39, 1073741864, 131073, 40, 1073741864, 131073, 41, 1073741864, 131074, 42, -1610612695, 131073, 46, -1073741783, 131073, 47, 42, 0, 48, 42, 0, 49, 42, 0, 50, 42, 0, 51, 42, 0, 52, 42, 0, 53, 42, 0, 54, 42, 0, 55, 42, 0, 56, 42, 0, 57, 1610612778, 0, 58, 1610612778, 0, 59, -1610612695, 131073, 131071, -1073741783, 131073, 65536, 40, 65536, 65537, 40, 65537, 65538, 40, 65537, 65539, 40, 65537, 65540, 40, 65537, 65541, 40, 65537, 65542, 40, 65537, 65543, 40, 65537, 65544, 40, 65538, 65545, -1610612695, 131073, 65549, -1073741783, 131073, 65550, 40, 65536, 65551, 40, 65537, 65552, 40, 65537, 65553, 40, 65537, 65554, 40, 65537, 65555, 40, 65537, 65556, 40, 65537, 65557, 40, 65537, 65558, 40, 65537, 65559, 40, 65537, 65560, 40, 65538, 65561, -1610612695, 131073, 65565, -1073741783, 131073, 65566, 40, 65536, 65567, 40, 65537, 65568, 40, 65537, 65569, 40, 65537, 65570, 40, 65537, 65571, 40, 65537, 65572, 40, 65537, 65573, 40, 65537, 65574, 40, 65537, 65575, 40, 65537, 65576, 40, 65537, 65577, 40, 65538, 65578, -1610612695, 131073, 65582, -1073741783, 131073, 65583, 42, 0, 65584, 42, 0, 65585, 42, 0, 65586, 42, 0, 65587, 42, 0, 65588, 42, 0, 65589, 42, 0, 65590, 42, 0, 65591, 42, 0, 65592, 42, 0, 65593, 1610612778, 0, 65594, 1610612778, 0, 65595, -1610612695, 131073, 196607, -1073741783, 131073, 131072, 40, 131072, 131073, 40, 131073, 131074, 40, 131073, 131075, 40, 131073, 131076, 40, 131073, 131077, 40, 131073, 131078, 40, 131073, 131079, 40, 131073, 131080, 40, 131074, 131081, -1610612695, 131073, 131085, -1073741783, 131073, 131086, 40, 131072, 131087, 40, 131073, 131088, 40, 131073, 131089, 40, 131073, 131090, 40, 131073, 131091, 40, 131073, 131092, 40, 131073, 131093, 40, 131073, 131094, 40, 131073, 131095, 40, 131073, 131096, 40, 131074, 131097, -1610612695, 131073, 131101, -1073741783, 131073, 131102, 40, 131072, 131103, 40, 131073, 131104, 40, 131073, 131105, 40, 131073, 131106, 40, 131073, 131107, 40, 131073, 131108, 40, 131073, 131109, 40, 131073, 131110, 40, 131073, 131111, 40, 131073, 131112, 40, 131073, 131113, 40, 131074, 131114, -1610612695, 131073, 131118, -1073741783, 131073, 131119, 42, 0, 131120, 42, 0, 131121, 42, 0, 131122, 42, 0, 131123, 42, 0, 131124, 42, 0, 131125, 42, 0, 131126, 42, 0, 131127, 42, 0, 131128, 42, 0, 131129, 1610612778, 0, 131130, 1610612778, 0, 131131, -1610612695, 131073, 262143, -1073741783, 131073, 196608, 42, 0, 196609, 42, 0, 196610, 42, 0, 196611, 42, 0, 196612, 42, 0, 196613, 42, 0, 196614, 42, 0, 196615, 42, 0, 196616, 42, 0, 196617, -1610612695, 131073, 196621, -1073741783, 131073, 196622, 42, 0, 196623, 42, 0, 196624, 42, 0, 196625, 42, 0, 196626, 42, 0, 196627, 42, 0, 196628, 42, 0, 196629, 42, 0, 196630, 42, 0, 196631, 42, 0, 196632, 42, 0, 196633, -1610612695, 131073, 196637, -1073741783, 131073, 196638, 42, 0, 196639, 42, 0, 196640, 42, 0, 196641, 42, 0, 196642, 42, 0, 196643, 42, 0, 196644, 42, 0, 196645, 42, 0, 196646, 42, 0, 196647, 42, 0, 196648, 42, 0, 196649, 42, 0, 196650, -1610612695, 131073, 196654, -1073741783, 131073, 196655, 42, 0, 196656, 42, 0, 196657, 42, 0, 196658, 42, 0, 196659, 42, 0, 196660, 42, 0, 196661, 42, 0, 196662, 42, 0, 196663, 42, 0, 196664, 42, 0, 196665, 1610612778, 0, 196666, 1610612778, 0, 196667, -1610612695, 131073, 327679, -1073741783, 131073, 262144, 42, 0, 262145, 42, 0, 262146, 42, 0, 262147, 42, 0, 262148, 42, 0, 262149, 42, 0, 262150, 42, 0, 262151, 42, 0, 262152, 42, 0, 262153, -1610612695, 131073, 262157, -1073741783, 131073, 262158, 42, 0, 262159, 42, 0, 262160, 42, 0, 262161, 42, 0, 262162, 42, 0, 262163, 42, 0, 262164, 42, 0, 262165, 42, 0, 262166, 42, 0, 262167, 42, 0, 262168, 42, 0, 262169, -1610612695, 131074, 262170, -1073741783, 65536, 262171, -1073741783, 65536, 262172, -1073741783, 65536, 262173, -1073741783, 131072, 262174, 42, 0, 262175, 42, 0, 262176, 42, 0, 262177, 42, 0, 262178, 42, 0, 262179, 42, 0, 262180, 42, 0, 262181, 42, 0, 262182, 42, 0, 262183, 42, 0, 262184, 42, 0, 262185, 42, 0, 262186, -1610612695, 131073, 262190, -1073741783, 131073, 262191, 42, 0, 262192, 42, 0, 262193, 42, 0, 262194, 42, 0, 262195, 42, 0, 262196, 42, 0, 262197, 42, 0, 262198, 42, 0, 262199, 42, 0, 262200, 42, 0, 262201, 1610612778, 0, 262202, 1610612778, 0, 262203, -1610612695, 131073, 393215, -1073741783, 131073, 327680, 42, 0, 327681, 42, 0, 327682, 42, 0, 327683, 42, 0, 327684, 42, 0, 327685, 42, 0, 327686, 42, 0, 327687, 42, 0, 327688, 42, 0, 327689, -1610612695, 131073, 327693, -1073741783, 131073, 327694, 42, 0, 327695, 42, 0, 327696, 42, 0, 327697, 42, 0, 327698, 42, 0, 327699, 42, 0, 327700, 42, 0, 327701, 42, 0, 327702, 42, 0, 327703, 42, 0, 327704, 42, 0, 327705, 42, 0, 327706, 42, 0, 327707, 42, 0, 327708, 42, 0, 327709, 42, 0, 327710, 42, 0, 327711, 42, 0, 327712, 42, 0, 327713, 42, 0, 327714, 42, 0, 327715, 42, 0, 327716, 42, 0, 327717, 42, 0, 327718, 42, 0, 327719, 42, 0, 327720, 42, 0, 327721, 42, 0, 327722, -1610612695, 131073, 327726, -1073741783, 131073, 327727, 42, 0, 327728, 42, 0, 327729, 42, 0, 327730, 42, 0, 327731, 42, 0, 327732, 42, 0, 327733, 42, 0, 327734, 42, 0, 327735, 42, 0, 327736, 42, 0, 327737, 1610612778, 0, 327738, 1610612778, 0, 327739, -1610612695, 131073, 458751, -1073741783, 131073, 393216, 42, 0, 393217, 42, 0, 393218, 42, 0, 393219, 42, 0, 393220, 42, 0, 393221, 42, 0, 393222, 42, 0, 393223, 42, 0, 393224, 42, 0, 393225, -1610612695, 131074, 393226, -1610612695, 65538, 393227, -1073741783, 65536, 393228, -1073741783, 65536, 393229, -1073741783, 131072, 393230, 42, 0, 393231, 42, 0, 393232, 42, 0, 393233, 42, 0, 393234, 42, 0, 393235, 42, 0, 393236, 42, 0, 393237, 42, 0, 393238, 42, 0, 393239, 42, 0, 393240, 42, 0, 393241, -1610612695, 131072, 393242, -1610612695, 65536, 393243, -1610612695, 65536, 393244, -1610612695, 65536, 393245, -1073741783, 131074, 393246, 42, 0, 393247, 42, 0, 393248, 42, 0, 393249, 42, 0, 393250, 42, 0, 393251, 42, 0, 393252, 42, 0, 393253, 42, 0, 393254, 42, 0, 393255, 42, 0, 393256, 42, 0, 393257, 42, 0, 393258, -1610612695, 131074, 393259, -1610612695, 65538, 393260, -1073741783, 65536, 393261, -1073741783, 65536, 393262, -1073741783, 131072, 393263, 42, 0, 393264, 42, 0, 393265, 42, 0, 393266, 42, 0, 393267, 42, 0, 393268, 42, 0, 393269, 42, 0, 393270, 42, 0, 393271, 42, 0, 393272, 42, 0, 393273, 1610612778, 0, 393274, 1610612778, 0, 393275, -1610612695, 131073, 524287, -1073741783, 131073, 458752, 42, 0, 458753, 42, 0, 458754, 42, 0, 458755, 42, 0, 458756, 42, 0, 458757, 42, 0, 458758, 42, 0, 458759, 42, 0, 458760, 42, 0, 458761, 1610612778, 0, 458762, 1610612778, 0, 458763, -1073741782, 0, 458764, 1610612778, 0, 458765, -1610612694, 0, 458766, 42, 0, 458767, 42, 0, 458768, 42, 0, 458769, 42, 0, 458770, 42, 0, 458771, 42, 0, 458772, 42, 0, 458773, 42, 0, 458774, 42, 0, 458775, 42, 0, 458776, 42, 0, 458777, -1610612695, 131073, 458781, -1073741783, 131073, 458782, 42, 0, 458783, 42, 0, 458784, 42, 0, 458785, 42, 0, 458786, 42, 0, 458787, 42, 0, 458788, 42, 0, 458789, 42, 0, 458790, 42, 0, 458791, 42, 0, 458792, 42, 0, 458793, 42, 0, 458794, 1610612778, 0, 458795, 1610612778, 0, 458796, -1073741782, 0, 458797, 1610612778, 0, 458798, -1610612694, 0, 458799, 42, 0, 458800, 42, 0, 458801, 42, 0, 458802, 42, 0, 458803, 42, 0, 458804, 42, 0, 458805, 42, 0, 458806, 42, 0, 458807, 42, 0, 458808, 42, 0, 458809, 1610612778, 0, 458810, 1610612778, 0, 458811, -1610612695, 131073, 589823, -1073741783, 131073, 524288, 42, 0, 524289, 42, 0, 524290, 42, 0, 524291, 42, 0, 524292, 42, 0, 524293, 42, 0, 524294, 42, 0, 524295, 42, 0, 524296, 42, 0, 524297, -1610612695, 131072, 524298, -1610612695, 65536, 524299, -1610612695, 65536, 524300, -1610612695, 65536, 524301, -1073741783, 131074, 524302, 42, 0, 524303, 42, 0, 524304, 42, 0, 524305, 42, 0, 524306, 42, 0, 524307, 42, 0, 524308, 42, 0, 524309, 42, 0, 524310, 42, 0, 524311, 42, 0, 524312, 42, 0, 524313, -1610612695, 131073, 524317, -1073741783, 131073, 524318, 42, 0, 524319, 42, 0, 524320, 42, 0, 524321, 42, 0, 524322, 42, 0, 524323, 42, 0, 524324, 42, 0, 524325, 42, 0, 524326, 42, 0, 524327, 42, 0, 524328, 42, 0, 524329, 42, 0, 524330, -1610612695, 131072, 524331, -1610612695, 65536, 524332, -1610612695, 65536, 524333, -1610612695, 65536, 524334, -1073741783, 131074, 524335, 42, 0, 524336, 42, 0, 524337, 42, 0, 524338, 42, 0, 524339, 42, 0, 524340, 42, 0, 524341, 42, 0, 524342, 42, 0, 524343, 42, 0, 524344, 42, 0, 524345, 1610612778, 0, 524346, 1610612778, 0, 524347, -1610612695, 131073, 655359, -1073741783, 131073, 589824, 42, 0, 589825, 42, 0, 589826, 42, 0, 589827, 42, 0, 589828, 42, 0, 589829, 42, 0, 589830, 42, 0, 589831, 42, 0, 589832, 42, 0, 589833, -1610612695, 131073, 589837, -1073741783, 131073, 589838, 42, 0, 589839, 42, 0, 589840, 42, 0, 589841, 42, 0, 589842, 42, 0, 589843, 42, 0, 589844, 42, 0, 589845, 42, 0, 589846, 42, 0, 589847, 42, 0, 589848, 42, 0, 589849, -1610612695, 131073, 589853, -1073741783, 131073, 589854, 42, 0, 589855, 42, 0, 589856, 42, 0, 589857, 42, 0, 589858, 42, 0, 589859, 42, 0, 589860, 42, 0, 589861, 42, 0, 589862, 42, 0, 589863, 42, 0, 589864, 42, 0, 589865, 42, 0, 589866, -1610612695, 131073, 589870, -1073741783, 131073, 589871, 41, 131073, 589872, 41, 131073, 589873, 41, 131073, 589874, 41, 131073, 589875, 41, 131073, 589876, 41, 131073, 589877, 41, 131073, 589878, 41, 131073, 589879, 41, 131073, 589880, 41, 131073, 589881, 41, 131073, 589882, 41, 131073, 589883, -1610612695, 131073, 720895, -1073741783, 131073, 655360, 42, 0, 655361, 42, 0, 655362, 42, 0, 655363, 42, 0, 655364, 42, 0, 655365, 42, 0, 655366, 42, 0, 655367, 42, 0, 655368, 42, 0, 655369, -1610612695, 131073, 655373, -1073741783, 131073, 655374, 42, 0, 655375, 42, 0, 655376, 42, 0, 655377, 42, 0, 655378, 42, 0, 655379, 42, 0, 655380, 42, 0, 655381, 42, 0, 655382, 42, 0, 655383, 42, 0, 655384, 42, 0, 655385, -1610612695, 131073, 655389, -1073741783, 131073, 655390, 42, 0, 655391, 42, 0, 655392, 42, 0, 655393, 42, 0, 655394, 42, 0, 655395, 42, 0, 655396, 42, 0, 655397, 42, 0, 655398, 42, 0, 655399, 42, 0, 655400, 42, 0, 655401, 42, 0, 655402, -1610612695, 131073, 786431, -1073741783, 131073, 720896, 42, 0, 720897, 42, 0, 720898, 42, 0, 720899, 42, 0, 720900, 42, 0, 720901, 42, 0, 720902, 42, 0, 720903, 42, 0, 720904, 42, 0, 720905, -1610612695, 131073, 720909, -1073741783, 131073, 720910, 42, 0, 720911, 42, 0, 720912, 42, 0, 720913, 42, 0, 720914, 42, 0, 720915, 42, 0, 720916, 42, 0, 720917, 42, 0, 720918, 42, 0, 720919, 42, 0, 720920, 42, 0, 720921, -1610612695, 131073, 720925, -1073741783, 131073, 720926, 42, 0, 720927, 42, 0, 720928, 42, 0, 720929, 42, 0, 720930, 42, 0, 720931, 42, 0, 720932, 42, 0, 720933, 42, 0, 720934, 42, 0, 720935, 42, 0, 720936, 42, 0, 720937, 42, 0, 720938, -1610612695, 131073, 851967, -1073741783, 131073, 786432, 41, 131073, 786433, 41, 131073, 786434, 41, 131073, 786435, 41, 131073, 786436, 41, 131073, 786437, 41, 131073, 786438, 41, 131073, 786439, 41, 131073, 786440, 41, 131073, 786441, -1610612695, 131073, 786445, -1073741783, 131073, 786446, 41, 131073, 786447, 41, 131073, 786448, 41, 131073, 786449, 41, 131073, 786450, 41, 131073, 786451, 41, 131073, 786452, 41, 131073, 786453, 41, 131073, 786454, 41, 131073, 786455, 41, 131073, 786456, 41, 131073, 786457, -1610612695, 131073, 786461, -1073741783, 131073, 786462, 41, 131073, 786463, 41, 131073, 786464, 41, 131073, 786465, 41, 131073, 786466, 41, 131073, 786467, 41, 131073, 786468, 41, 131073, 786469, 41, 131073, 786470, 41, 131073, 786471, 41, 131073, 786472, 41, 131073, 786473, 41, 131073, 786474, -1610612695, 131073 )

[node name="grillage" parent="." instance=ExtResource( 1 )]
collision_layer = 7
collision_mask = 7
tile_data = PoolIntArray( -131024, 45, 0, -131015, 45, 0, -65488, 45, 0, -65479, 45, 0, 48, 45, 0, 57, 45, 0, 65584, 45, 0, 65593, 45, 0, 131120, 45, 0, 131129, 45, 0, 196625, 2, 0, 196644, -1073741822, 0, 196656, 45, 0, 196665, 45, 0, 262161, 2, 0, 262180, -1073741822, 0, 262192, 45, 0, 262201, 45, 0, 327697, 2, 0, 327716, -1073741822, 0, 327728, 45, 2, 327737, 45, 4, 393233, 2, 0, 393252, -1073741822, 0, 458769, 2, 0, 458770, 2, 0, 458771, 2, 0, 458772, 2, 0, 458773, 2, 0, 458774, 2, 0, 458775, 2, 0, 524324, -1073741822, 0, 589860, -1073741822, 0, 655396, -1073741822, 0, 720932, -1073741822, 0 )

[node name="grillage_spell" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( 327729, 45, 65543, 327730, 45, 65543, 327731, 45, 65543, 327732, 45, 65543, 327733, 45, 65543, 327734, 45, 65543, 327735, 45, 65543, 327736, 45, 65543 )

[node name="NPC" parent="." instance=ExtResource( 2 )]
position = Vector2( 112, 176 )
text = "Take this to cast spell on a long range"
interactible = true
img = ExtResource( 5 )

[node name="LF_Enigme1_1" parent="." instance=ExtResource( 9 )]
position = Vector2( 656, 176 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 176, 240 )

[node name="Pet" parent="." instance=ExtResource( 4 )]
position = Vector2( 208, 240 )

[node name="CavernDoor_Give_1" parent="." instance=ExtResource( 6 )]
position = Vector2( 304, 240 )

[node name="Torch_Engime1_1" parent="." instance=ExtResource( 8 )]
position = Vector2( 656, 112 )

[node name="Torch_Enigme1_2" parent="." instance=ExtResource( 8 )]
position = Vector2( 720, 176 )

[node name="CavernDoor_Engime1_1" parent="." instance=ExtResource( 6 )]
position = Vector2( 784, 240 )

[node name="CavernDoor_Enigme1_2" parent="." instance=ExtResource( 6 )]
position = Vector2( 816, 176 )

[node name="Cow" parent="." instance=ExtResource( 10 )]
position = Vector2( 768, 112 )

[node name="NPC2" parent="." instance=ExtResource( 11 )]
position = Vector2( 688, 112 )
text = "Breath on my cow to drink some of it milks and reset your breath's spicyness"

[node name="NPC3" parent="." instance=ExtResource( 11 )]
position = Vector2( 624, 144 )
text = "So sad that the long-range fire can not embrase the firecamp on the ground."

[node name="CavernDoor_Enigme2_1" parent="." instance=ExtResource( 6 )]
position = Vector2( 1168, 240 )

[node name="Torch_Enigme2" parent="." instance=ExtResource( 8 )]
position = Vector2( 1200, 368 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/E2_TorchMoving = SubResource( 1 )

[node name="Mirror2" parent="." instance=ExtResource( 12 )]
position = Vector2( 1264, 272 )

[node name="Mirror_E3_1" parent="." instance=ExtResource( 12 )]
position = Vector2( 1600, 128 )

[node name="Mirror_E3_2" parent="." instance=ExtResource( 12 )]
position = Vector2( 1696, 128 )
type = true

[node name="Mirror_E3_3" parent="." instance=ExtResource( 12 )]
position = Vector2( 1792, 128 )
type = true

[node name="Mirror_E3_4" parent="." instance=ExtResource( 12 )]
position = Vector2( 1760, 96 )
type = true

[node name="Mirror_E3_5" parent="." instance=ExtResource( 12 )]
position = Vector2( 1664, 96 )
type = true

[node name="Mirror_E3_6" parent="." instance=ExtResource( 12 )]
position = Vector2( 1600, -32 )
type = true

[node name="Mirror_E3_7" parent="." instance=ExtResource( 12 )]
position = Vector2( 1760, -32 )

[node name="Mirror_E3_8" parent="." instance=ExtResource( 12 )]
position = Vector2( 1728, 64 )

[node name="Mirror_E3_9" parent="." instance=ExtResource( 12 )]
position = Vector2( 1632, 0 )
type = true

[node name="Torch_E3" parent="." instance=ExtResource( 8 )]
position = Vector2( 1696, -64 )

[node name="Stairs" parent="." instance=ExtResource( 13 )]
position = Vector2( 1840, 240 )
